--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "node-router",
   "version": "0.0.1",
   "description": "Express like router for Node",
+  "author": "Anton Karpenko <i@karpolan> (https://karpolan.com)",
+  "homepage": "https://github.com/karpolan/node-router#readme",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +21,7 @@
     "router",
     "no express"
   ],
-  "author": "Anton Karpenko <i@karpolan> (https://karpolan.com)",
-  "homepage": "https://github.com/karpolan/node-router#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
